--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -13,6 +13,8 @@
         <action
             android:id="@+id/action_openingScreenFragment_to_loginFragment"
             app:destination="@id/loginFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
             app:popUpTo="@+id/openingScreenFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -25,6 +27,8 @@
         <action
             android:id="@+id/action_loginFragment_to_siteListFragment"
             app:destination="@id/siteListFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
             app:popUpTo="@+id/loginFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -36,10 +40,14 @@
         tools:layout="@layout/fragment_site_list" >
         <action
             android:id="@+id/action_siteListFragment_to_siteFragment"
-            app:destination="@id/siteFragment" />
+            app:destination="@id/siteFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
         <action
             android:id="@+id/action_siteListFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
+            app:destination="@id/settingsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
     <fragment
@@ -63,7 +71,9 @@
             android:defaultValue="false" />
         <action
             android:id="@+id/action_siteFragment_to_siteEditLocationFragment"
-            app:destination="@id/siteEditLocationFragment" />
+            app:destination="@id/siteEditLocationFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/siteEditLocationFragment"
