--- a/app/src/main/res/menu/menu_sitelist.xml
+++ b/app/src/main/res/menu/menu_sitelist.xml
@@ -11,6 +11,10 @@
         android:title="@string/menu_settings" />
 
     <item
+        android:id="@+id/item_mapOfAllSites"
+        android:title="@string/menu_mapOfAllSites" />
+
+    <item
         android:id="@+id/item_logout"
         android:title="@string/menu_logout" />
 </menu>
