--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,29 +2,34 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/nav_site"
+        android:icon="@drawable/ic_menu_add"
+        android:title="@string/menu_addSite" />
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_site"
-            android:icon="@drawable/ic_menu_add"
-            android:title="@string/menu_addSite" />
-        <item
-            android:id="@+id/nav_mapOfAllSites"
-            android:icon="@drawable/ic_menu_map"
-            android:title="@string/menu_mapOfAllSites" />
-        <item
-            android:id="@+id/nav_favouriteSites"
-            android:icon="@drawable/ic_menu_favourites"
-            android:title="@string/menu_favourites" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_settings"
-            android:title="@string/menu_settings" />
+    <group android:id="@+id/group_menuFeatures"
+        android:checkableBehavior="single">
 
         <item
             android:id="@+id/nav_siteList"
             android:icon="@drawable/ic_menu_site_list"
             android:title="@string/menu_siteList" />
+
+        <item
+            android:id="@+id/nav_mapOfAllSites"
+            android:icon="@drawable/ic_menu_map"
+            android:title="@string/menu_mapOfAllSites" />
+
+        <item
+            android:id="@+id/nav_favouriteSites"
+            android:icon="@drawable/ic_menu_favourites"
+            android:title="@string/menu_favourites" />
+
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_settings"
+            android:title="@string/menu_settings" />
+
     </group>
 
     <item
