--- a/app/src/main/res/layout/fragment_site_list.xml
+++ b/app/src/main/res/layout/fragment_site_list.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="text"
+        android:queryHint="@string/hint_search_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
