--- a/app/src/main/res/layout/fragment_site_list.xml
+++ b/app/src/main/res/layout/fragment_site_list.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:queryHint="@string/hint_search_title"
+        android:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
