--- a/app/src/main/res/layout/header_nav_drawer.xml
+++ b/app/src/main/res/layout/header_nav_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="240dp"
     android:background="@color/colorAccent"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -18,6 +18,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:text="@string/app_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_created_by"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
